--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# My Exclusions
+media/
+
+
 # Created by .ignore support plugin (hsz.mobi)
 ### Python template
 # Byte-compiled / optimized / DLL files
@@ -7,6 +11,7 @@ __pycache__/
 
 # C extensions
 *.so
+
 
 # Distribution / packaging
 .Python
