--- a/pytest.ini
+++ b/pytest.ini
@@ -1,8 +1,8 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = Shelfio.test_settings
-addopts = --nomigrations --cov=. --cov-report=html
+;addopts = --nomigrations --cov=. --cov-report=html
 
 # debug in pycharm with pytest using this below (deleted --cov)
-;addopts = --nomigrations . -report=html
+addopts = --nomigrations . -report=html
 
 
